# wechat-mini-wasm-demo

./: .gitignore  Cargo.toml
src/: lib.rs  replace.rs
wechat-mini/: project.config.json  project.private.config.json
wechat-mini/pages/index/: index.js  index.wxml  wechat_mini_wasm_demo.js  wechat_mini_wasm_demo_bg.wasm
